<resources>
    <string name="app_name">Blue Flush</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password_text">Recover here</string>
    <string name="login">Login</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="email">Email</string>
    <string name="recover">Recover</string>
    <string name="current_location">Current Location:</string>
    <string name="check_in"><b>Check In</b></string>
    <string name="workschedule_today"><b>Today\'s Work Schedule:</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_required">Permission Required</string>
    <string name="permission_message">Gant permission to access camera.</string>
    <string name="permission_warning">All permissions are required.</string>
    <string name="capture">Capture</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="profilephoto">test</string>
    <string name="approve">test1</string>
    <string name="change_password">test2</string>
    <string name="authentication">test3</string>
    <string name="aiddescription" />
    <string name="servicedesc" />
</resources>