<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorScheme5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:passwordToggleEnabled="true">

    <ImageView
        android:id="@+id/imageViewCompanyLogoLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/blueflushicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCompanyNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/BlueFlush"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCompanyLogoLogin" />

    <EditText
        android:id="@+id/editTextUserEmailLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/user_email"
        android:textColorHint="@color/ColorScheme2"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="15dp"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompanyNameLogin" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/ColorScheme2"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="15dp"
        android:paddingStart="15dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserEmailLogin" />

    <TextView
        android:id="@+id/textViewForgotPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/ColorScheme2"
        android:text="@string/forgot_password"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

    <TextView
        android:id="@+id/textViewRecoverLogin"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:minHeight="48dp"
        android:text="@string/recover_password_text"
        android:textColor="@color/teal_200"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@id/textViewForgotPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="20dp"
        android:backgroundTint="@color/ColorScheme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordLogin" />

    <View
        android:id="@+id/lineSeparatorLogin"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/ColorScheme1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"/>

    <Button
        android:id="@+id/buttonFingerprintLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/use_fingerprint"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="20dp"
        android:backgroundTint="@color/ColorScheme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineSeparatorLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>