<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tabfragments.CheckInOutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentLocationLabel"
            android:text="@string/current_location"
            android:textSize="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginLeft="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentLocation"
            android:text="Insert Location Here"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/text_view_border"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentLocationLabel"/>

        <Button
            android:layout_width="210sp"
            android:layout_height="210sp"
            android:id="@+id/buttonCheckInOut"
            android:background="@drawable/round_button"
            android:layout_marginTop="50sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentLocation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCheckInOut"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/check_in"
            android:translationZ="10dp"
            android:layout_marginBottom="60sp"
            app:layout_constraintTop_toTopOf="@+id/buttonCheckInOut"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCheckInOut"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCheckInOut"
            app:layout_constraintRight_toRightOf="@+id/buttonCheckInOut"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCheckInOutTime"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="08:00AM"
            android:layout_marginBottom="60sp"
            android:translationZ="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCheckInOut"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCheckInOut"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCheckInOut"
            app:layout_constraintRight_toRightOf="@+id/buttonCheckInOut"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:id="@+id/textViewWorkScheduleBackground"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/text_view_border"
            app:layout_constraintTop_toBottomOf="@+id/buttonCheckInOut"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWorkSchedule"
            android:text="@string/workschedule_today"
            android:textSize="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            app:layout_constraintLeft_toLeftOf="@+id/textViewWorkScheduleBackground"
            app:layout_constraintTop_toTopOf="@+id/textViewWorkScheduleBackground"/>

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/calendaricon_icononly"
            android:id="@+id/imageViewCalendarIcon"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewWorkSchedule"
            app:layout_constraintLeft_toLeftOf="@+id/textViewWorkScheduleBackground"/>

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/ic_baseline_access_time_24"
            android:id="@+id/imageViewTimeIcon"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCalendarIcon"
            app:layout_constraintLeft_toLeftOf="@+id/textViewWorkScheduleBackground"/>

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/ic_baseline_location_on_24"
            android:id="@+id/imageViewLocationIcon"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTimeIcon"
            app:layout_constraintLeft_toLeftOf="@+id/textViewWorkScheduleBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCheckInOutDate"
            android:text="Insert Date Here"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"
            app:layout_constraintLeft_toRightOf="@+id/imageViewCalendarIcon"
            app:layout_constraintTop_toTopOf="@+id/imageViewCalendarIcon"
            app:layout_constraintBottom_toBottomOf="@id/imageViewCalendarIcon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCheckInOutWorkShift"
            android:text="Insert Work Shift Here"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"
            app:layout_constraintLeft_toRightOf="@+id/imageViewTimeIcon"
            app:layout_constraintTop_toTopOf="@+id/imageViewTimeIcon"
            app:layout_constraintBottom_toBottomOf="@id/imageViewTimeIcon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCheckInOutLocation"
            android:text="Insert Location Here"
            android:textSize="15sp"
            android:layout_marginLeft="20sp"
            app:layout_constraintLeft_toRightOf="@+id/imageViewLocationIcon"
            app:layout_constraintTop_toTopOf="@+id/imageViewLocationIcon"
            app:layout_constraintBottom_toBottomOf="@id/imageViewLocationIcon"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>